[package]
name = "electric_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_dev_tools"]}
bevy-inspector-egui = "0.35.0"
bevy_pretty_text = "0.3"
bevy_polyline = "0.13.0"
bevy_skein = "0.4.0"

[build-dependencies]
bevy_reflect = { version = "0.17.3", features = ["documentation"] }
